--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-png">
+    <img class="top-cloud" src="cloud.png" alt="cloud-png">
     <h1>I'm Ashwin.</h1>
     <h2>a coder.</h2>
-    <img class='bottom-cloud' src="images/cloud.png" alt="cloud-png">
-    <img class="mountain-img"src="images/mountain.png" alt="mountain-png">
+    <img class='bottom-cloud' src="cloud.png" alt="cloud-png">
+    <img class="mountain-img" src="mountain.png" alt="mountain-png">
   </div>
 
   <div class="middle-container">
